<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeScreen"
        android:icon="@drawable/baseline_home"
        android:contentDescription="@string/title_home"
        />
    <item
        android:id="@+id/newPost"
        android:icon="@mipmap/new_post_image_foreground"
        android:contentDescription="@string/title_new_post"
        />
    <item
        android:id="@+id/favourites"
        android:icon="@mipmap/ic_favorite_foreground"
        android:contentDescription="@string/title_favourites"
        />
    <item
        android:id="@+id/userProfile"
        android:icon="@mipmap/ic_user_profile_foreground"
        android:contentDescription="@string/title_user_profile"
        />

</menu>