<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeScreen">

    <fragment
        android:id="@+id/homeScreen"
        android:name="cr.una.pawsitive.view.home.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeScreen_to_other_user_profile"
            app:destination="@id/other_user_profile" />
    </fragment>
    <fragment
        android:id="@+id/about"
        android:name="cr.una.pawsitive.view.about.About"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/userProfile"
        android:name="cr.una.pawsitive.view.user_profile.fragment_user_profile"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />
    <!--new post-->
    <fragment
        android:id="@+id/newPost"
        android:name="cr.una.pawsitive.view.new_post.fragment_new_post"
        android:label="@string/title_new_post"
        tools:layout="@layout/fragment_new_post" />
    <fragment
        android:id="@+id/favourites"
        android:name="cr.una.pawsitive.view.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites">
        <action
            android:id="@+id/action_favouritesScreen_to_other_user_profile"
            app:destination="@id/other_user_profile" />
    </fragment>
    <fragment
        android:id="@+id/other_user_profile"
        android:name="cr.una.pawsitive.view.other_user_profile.other_user_profile"
        android:label="fragment_other_user_profile"
        tools:layout="@layout/fragment_other_user_profile" />

</navigation>