<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_profile_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:pointerIcon="none"
    tools:context=".view.user_profile.fragment_user_profile">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/primary"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/title_user_profile"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user_profile_img_foreground" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blackBotton"
            android:text="@string/editProfileButton"
            app:cornerRadius="15dp" />

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/labelBackground"
            android:fontFamily="sans-serif-black"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp"
            android:text="@string/contactLabel"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="25dp"
            android:paddingVertical="3dp">

            <ImageView
                android:id="@+id/imageViewMail"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:src="@mipmap/ic_contact_foreground" />

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/mailText"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/labelBackground"
            android:fontFamily="sans-serif-black"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp"
            android:text="@string/contentLabel"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp">

            <ImageView
                android:id="@+id/imageViewFav"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:src="@mipmap/ic_favorite_foreground" />

            <TextView
                android:id="@+id/textViewFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/favoritesLabel"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/labelBackground"
            android:fontFamily="sans-serif-black"
            android:paddingHorizontal="30dp"
            android:paddingVertical="5dp"
            android:text="@string/preferencesLabel"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="25dp"
            android:paddingVertical="5dp">

            <ImageView
                android:id="@+id/imageViewLng"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@mipmap/ic_translate_foreground" />

            <TextView
                android:id="@+id/textViewLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/languageLabel"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:backgroundTint="@color/wineButton"
        android:text="@string/logoutButton"
        app:cornerRadius="15dp" />
</LinearLayout>