<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="263dp"
            android:layout_height="47dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_inputs_styles"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/emailText"
            android:inputType="text"
            android:text="jane@example.com"
            android:textColorHint="@color/hintText" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="263dp"
            android:layout_height="47dp"
            android:background="@drawable/text_inputs_styles"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:text="password"
            android:textColorHint="@color/hintText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/blackBotton"
            android:text="@string/logInText"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>