<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.fragment_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/register_image_foreground" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="263dp"
            android:layout_height="47dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_inputs_styles"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/usernameText"
            android:inputType="text"
            android:textColorHint="@color/hintText" />

        <EditText
            android:id="@+id/firstNameTV"
            android:layout_width="263dp"
            android:layout_height="47dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_inputs_styles"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/firstNameText"
            android:inputType="text"
            android:textColorHint="@color/hintText" />

        <EditText
            android:id="@+id/lastNameTV"
            android:layout_width="263dp"
            android:layout_height="47dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_inputs_styles"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/lastNameText"
            android:inputType="text"
            android:textColorHint="@color/hintText" />

        <include
            android:id="@+id/layout_login"
            layout="@layout/layout_log_in_register_form" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/blackBotton"
            android:text="@string/signUpText"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />

    </LinearLayout>
</FrameLayout>