<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        style="@style/CardViewBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/newPostLayout"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginBottom="-15dp"
                        android:orientation="horizontal"
                        android:paddingRight="0dp">

                        <androidx.constraintlayout.utils.widget.ImageFilterButton
                            android:id="@+id/imageFilterButton"
                            android:layout_width="140dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:background="@mipmap/image_place_holder_foreground" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/petNameLabel"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_inputs_styles"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/addNameLabel"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="120dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="15dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:id="@+id/aboutLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:hint="@string/title_about"
                            android:textColorHint="@color/black"
                            android:textSize="14sp" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/forLabel"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_inputs_styles"
                        android:gravity="center_horizontal"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/addForLabel"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/animalLabel"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_inputs_styles"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/addAnimalLabel"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/addresLabel"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_inputs_styles"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/addAddressLabel"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/breedLabel"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_inputs_styles"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/addBreedLabel"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/ageLabel"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_inputs_styles"
                        android:gravity="center"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/addAgeLabel"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="-35dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@mipmap/ai_button_foreground" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@mipmap/basket_image_foreground" />
    </LinearLayout>
</LinearLayout>